# raytracer

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: canvas.cpp  canvas.hpp  canvas.test.cpp  color.cpp  color.hpp  color.test.cpp  main.cpp  matrix.hpp  matrix.test.cpp  point.cpp  point.hpp  point.test.cpp  tuple.hpp  tuple.test.cpp  util.cpp  util.h  util.hpp  util.test.cpp  vector.cpp  vector.hpp  vector.test.cpp
